[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "padre_meddea"
description = "A Python package to process and analyze data from the PADRE MEDDEA instrument."
readme = "README.rst"
dynamic = ["version"]
authors = [
  {name = "Steven Christe", email="steven.christe@nasa.gov"},
  {name = "Andrew Robbertz", email="a.robbertz@gmail.com"},
  {name = "Damian Barrous-Dume", email="dbarrous@navteca.com"}
]
license = {file = "LICENSE.rst"}
requires-python = ">=3.10"
keywords = ["nasa mission", "space weather"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache 2.0",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'astropy==6.1.*',
  'numpy==2.*',
  'sunpy==6.*',
  'roentgen',
  'specutils==1.*',
  'ccsdspy==1.4.*',
  'matplotlib==3.10.*',
  'swxsoc @ git+https://github.com/swxsoc/swxsoc.git@main',
  'gitpython==3.1.*',
  'solarnet_metadata @ git+https://github.com/IHDE-Alliance/solarnet_metadata.git@solarnet_metadata_package',
]

[project.optional-dependencies]
dev = [
  'coverage>=5.0.3',
  'pytest==8.3.5',
  'pytest-astropy',
  'pytest-cov',
  'black',
  'flake8',
  'coverage[toml]',
  'pytest-doctestplus',
]

docs = ['sphinx', 'sphinx-automodapi', 'matplotlib', 'sphinx-copybutton']

test = ['pytest', 'pytest-astropy', 'pytest-cov', 'coverage[toml]']

style = ['black', 'flake8']

[tool.setuptools.package-data]
"padre_meddea.data" = ["**"]

[tool.setuptools]
packages = ["padre_meddea"]

[tool.setuptools_scm]
write_to = "padre_meddea/_version.py"

[tool.pytest.ini_options]
testpaths = ["padre_meddea/tests", "docs"]
doctest_plus = "enabled"
norecursedirs = ["_build"]
text_file_format = "rst"
addopts = "--doctest-rst --doctest-plus --doctest-report ndiff"

[tool.coverage.run]
omit = [
  'padre_meddea/__init*',
  'padre_meddea/conftest.py',
  'padre_meddea/*setup_package*',
  'padre_meddea/tests/*',
  'padre_meddea/*/tests/*',
  'padre_meddea/extern/*',
  'padre_meddea/version*',
  'padre_meddea/docs/_build/*',
  '*/padre_meddea/__init*',
  '*/padre_meddea/conftest.py',
  '*/padre_meddea/*setup_package*',
  '*/padre_meddea/tests/*',
  '*/padre_meddea/*/tests/*',
  '*/padre_meddea/extern/*',
  '*/padre_meddea/version*',
]

[tool.black]
line-length = 88
force-exclude = '''
(
  # Individual files to always exclude
  ^/padre_meddea/_version.py
)
'''
