[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = "padre_meddea"
description = "A Python package to process and analyze data from the PADRE MEDDEA instrument."
readme = "README.rst"
dynamic = ["version"]
authors = [
  {name = "Steven Christe", email="steven.christe@nasa.gov"},
  {name = "Andrew Robbertz", email="a.robbertz@gmail.com"},
  {name = "Damian Barrous-Dume", email="dbarrous@navteca.com"},
  {name = "Niharika Godbole", email="niharika.godbole@nasa.gov"},
]
license = {file = "LICENSE.rst"}
requires-python = ">=3.10"
keywords = ["nasa mission", "space weather"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache 2.0",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  'astropy==6.1.*',
  'numpy==2.*',
  'sunpy==6.*',
  'roentgen',
  'specutils==1.*',
  'ccsdspy==1.4.*',
  'matplotlib==3.10.*',
  'swxsoc @ git+https://github.com/swxsoc/swxsoc.git@main',
  'gitpython==3.1.*',
  'solarnet_metadata @ git+https://github.com/IHDE-Alliance/solarnet_metadata.git@solarnet_metadata_package',
]

[project.optional-dependencies]
dev = [
  'coverage>=5.0.3',
  'pytest',
  'pytest-astropy',
  'pytest-cov',
  'coverage[toml]',
  'pytest-doctestplus',
  'ruff',
]

docs = ['sphinx', 'sphinx-automodapi', 'matplotlib', 'sphinx-copybutton']

test = ['pytest', 'pytest-astropy', 'pytest-cov', 'coverage[toml]']

style = ['ruff']

[tool.setuptools.package-data]
"padre_meddea.data" = ["**"]

[tool.setuptools]
packages = ["padre_meddea"]

[tool.setuptools_scm]
write_to = "padre_meddea/_version.py"

[tool.pytest.ini_options]
testpaths = ["padre_meddea/tests", "docs"]
doctest_plus = "enabled"
norecursedirs = ["_build"]
text_file_format = "rst"
addopts = "--doctest-rst --doctest-plus --doctest-report ndiff"

[tool.coverage.run]
omit = [
  'padre_meddea/__init*',
  'padre_meddea/conftest.py',
  'padre_meddea/*setup_package*',
  'padre_meddea/tests/*',
  'padre_meddea/*/tests/*',
  'padre_meddea/extern/*',
  'padre_meddea/version*',
  'padre_meddea/docs/_build/*',
  '*/padre_meddea/__init*',
  '*/padre_meddea/conftest.py',
  '*/padre_meddea/*setup_package*',
  '*/padre_meddea/tests/*',
  '*/padre_meddea/*/tests/*',
  '*/padre_meddea/extern/*',
  '*/padre_meddea/version*',
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
  "conftest.py",
  "conf.py"
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
